@@ -685,6 +685,10 @@ SERD_API
 SerdNode*
 serd_new_resolved_uri(const char* str, const SerdNode* base);
 
+/// Return a normalised version of `node` if possible, NULL otherwise
+SerdNode*
+serd_node_normalise(const SerdEnv* env, const SerdNode* node);
+
 /**
    Resolve `node` against `base`
 
@@ -1189,6 +1193,22 @@ serd_sink_write(const SerdSink*    sink,
 SERD_API
 SerdStatus
 serd_sink_write_end(const SerdSink* sink, const SerdNode* node);
+
+/**
+   @}
+   @name Normalisation
+   @{
+*/
+
+/**
+   Return a sink which normalises literal nodes in statements where possible.
+
+   The returned sink acts like `target` in all respects, except literal nodes
+   in statements may be modified from the original.
+*/
+SERD_API
+SerdSink*
+serd_normaliser_new(const SerdSink* target);
 
 /**
    @}
