@@ -64,6 +64,7 @@ print_usage(const char* name, bool error)
 	fprintf(os, "  -k BYTES     Parser stack size.\n");
 	fprintf(os, "  -l           Lax (non-strict) parsing.\n");
 	fprintf(os, "  -m           Build and serialise a model (no streaming).\n");
+	fprintf(os, "  -n           Normalise literals.\n");
 	fprintf(os, "  -o SYNTAX    Output syntax: turtle/ntriples/nquads.\n");
 	fprintf(os, "  -p PREFIX    Add PREFIX to blank node IDs.\n");
 	fprintf(os, "  -q           Suppress all output except data.\n");
@@ -146,6 +147,7 @@ main(int argc, char** argv)
 	bool            osyntax_set   = false;
 	bool            validate      = false;
 	bool            use_model     = false;
+	bool            normalise     = false;
 	bool            quiet         = false;
 	size_t          stack_size    = 4194304;
 	const char*     input_string  = NULL;
@@ -178,6 +180,8 @@ main(int argc, char** argv)
 			writer_flags |= SERD_WRITE_LAX;
 		} else if (argv[a][1] == 'm') {
 			use_model = true;
+		} else if (argv[a][1] == 'n') {
+			normalise = true;
 		} else if (argv[a][1] == 'q') {
 			quiet = true;
 		} else if (argv[a][1] == 'v') {
@@ -277,7 +281,7 @@ main(int argc, char** argv)
 
 	SerdModel*      model    = NULL;
 	SerdInserter*   inserter = NULL;
-	const SerdSink* sink     = NULL;
+	const SerdSink* out_sink = NULL;
 	if (use_model) {
 		const SerdModelFlags flags =
 		        SERD_INDEX_SPO | (input_has_graphs ? SERD_INDEX_GRAPHS : 0U) |
@@ -286,9 +290,16 @@ main(int argc, char** argv)
 
 		model    = serd_model_new(world, flags);
 		inserter = serd_inserter_new(model, env, NULL);
-		sink     = serd_inserter_get_sink(inserter);
+		out_sink = serd_inserter_get_sink(inserter);
 	} else {
-		sink = serd_writer_get_sink(writer);
+		out_sink = serd_writer_get_sink(writer);
+	}
+
+	SerdSink*       normaliser = NULL;
+	const SerdSink* sink       = out_sink;
+	if (normalise) {
+		normaliser = serd_normaliser_new(out_sink);
+		sink       = normaliser;
 	}
 
 	if (quiet) {
@@ -365,6 +376,7 @@ main(int argc, char** argv)
 		serd_range_free(range);
 	}
 
+	serd_sink_free(normaliser);
 	serd_node_free(input_name);
 	serd_inserter_free(inserter);
 	serd_model_free(model);
