@@ -19,8 +19,9 @@ serd (1.0.0) unstable;
   * Add support for writing terse collections
   * Report writer errors and add strict write mode
   * Add support for xsd:float and xsd:double literals
+  * Add support for basic literal normalisation
 
- -- David Robillard <d@drobilla.net>  Sun, 13 Oct 2019 12:00:34 +0200
+ -- David Robillard <d@drobilla.net>  Mon, 14 Oct 2019 23:08:22 +0200
 
 serd (0.30.1) unstable;
 
